--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ body {
 
 li {
 	list-style-type: none;
+	margin-bottom: 15px;
 }
 
 h1 {
@@ -32,9 +33,14 @@ input {
 	padding: 10px 0;
 	margin-top: 20px;
 }
-
-h2 {
-	padding-top: 20px;
+.info {
+	padding-bottom: 20px;
 }
-
+.whole-table {
+	display: flex;
+	justify-content: space-around;
+	flex-wrap: wrap;
+	border: 1px dotted #fff;
+	padding: 15px;
+}
 
