--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
 	background-color: #34495e;
 	color: #fff;
-	width: 1200px;
+	max-width: 1200px;
 	margin: 0 auto;
 	text-align: center;
 	font-family: 'Lato', sans-serif;
@@ -42,5 +42,14 @@ input {
 	flex-wrap: wrap;
 	border: 1px dotted #fff;
 	padding: 15px;
+	margin-left: 20px;
+    margin-right: 20px;
+    margin-bottom: 20px;
 }
 
+@media(max-width: 768px) {
+	.whole-table {
+		display: flex;
+		flex-direction: column;
+	} 
+}
